2007-01-08  Tomas Frydrych  <tf@o-hand.com>

	* Sato/matchbox2/theme.xml:
	Description of matchbox-desktop.
	Further reduced size of title-bar font.

2007-01-08  Tomas Frydrych  <tf@o-hand.com>

	* Sato/matchbox2/theme.xml:
	Added description of matchbox-panel.
	Reduced size of title-bar font.

2007-12-21  Tomas Frydrych  <tf@o-hand.com>

	* configure.ac:
	* Sato/Makefile.am:
	* Sato/matchbox2:
	Initial commit of MBWM2 sato theme.

2007-07-31  Matthew Allum  <mallum@openedhand.com>

	* COPYING:
	Add CC3 license.

2007-07-30  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	Remove need for theme.desktop, not needed with newer panel/desktop
	and breaking distcheck.

2007-07-22  Ross Burton  <ross@openedhand.com>

	* Sato/matchbox/theme.xml:
	Implement the custom menu icon as a button, so it can be hidden
	when the window doesn't support custom.

2007-07-13  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	* Sato/matchbox/theme.xml:
	Add a down arrow for menus.

2007-07-11  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	* Sato/matchbox/theme.xml:
	Fix window close button state.

2006-12-23  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/theme.xml:
	Tweak titlebar text positioning / clipping.

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/theme.xml:
	Add panel in titlebar setup

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/theme.desktop.in:
	Remove old clearlooks config

2006-12-20  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	* Sato/matchbox/theme.xml:
	Add rough dialog styalising
